# Kujira

./: .gitignore  .impeccable.md  CLAUDE.md  README.md  index.html  latest.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: claude.rs  config.rs  gemini.rs  git.rs  hooks.rs  mod.rs  pty.rs  server.rs
src/components/claude/: ClaudeUsage.tsx  DailySparkline.tsx
src/components/layout/: FavoriteBar.tsx  FavoriteMenu.tsx  HelpModal.tsx  ProjectDetail.tsx  ProjectList.tsx  RightPanel.tsx  SettingsModal.tsx  SettingsPanel.tsx  TitleBar.tsx
src/components/servers/: LogPane.tsx  ServerPanel.tsx
src/components/shared/: ContextMenu.tsx  PopoverPortal.tsx
src/components/terminal/: AISuggestionPanel.tsx  BranchPicker.tsx  CommitPanel.tsx  GitStatusBar.tsx  TabBar.tsx  TerminalPane.tsx  WelcomeOverlay.tsx
src/hooks/: useClaudeUsage.ts  useClickOutside.ts  useFavorites.ts  useGitStatus.ts  useGroupedItems.ts  useProjectGitStatus.ts  useServers.ts  useTabs.ts  useTerminal.ts  useTheme.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: format.ts  persistConfig.ts  styles.ts
updater-aarch64/: Kujira.app.tar.gz.sig  Kujira_0.1.2_aarch64.app.tar.gz.sig  Kujira_0.1.3_aarch64.app.tar.gz.sig
updater-x64/: Kujira.app.tar.gz.sig  Kujira_0.1.2_x64.app.tar.gz.sig  Kujira_0.1.3_x64.app.tar.gz.sig
